--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             border-radius: 15px; /* Angoli arrotondati per le sezioni */
             box-shadow: 0 2px 10px rgba(0,0,0,0.15);
             text-align: justify; /* Testo giustificato nelle sezioni */
+            max-width: 600px; /* <--- Ho ridotto ulteriormente il max-width per un effetto più evidente */
+    /* Ho rimosso il .container da dentro le section per evitare che lo limiti due volte */max-width: 600px; /* <--- Ho ridotto ulteriormente il max-width per un effetto più evidente */
+    /* Ho rimosso il .container da dentro le section per evitare che lo limiti due volte */
         }
 
         h3 {
