--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif; /* Font per tutti i testi */
-            background-color: #9CAF88; /* Sfondo verde salvia */
+            background-color: #b6C1ad
+        ; /* Sfondo verde salvia */
             color: #B27777; /* Colore del testo principale: Rosa antico */
             line-height: 1.6;
             position: relative; /* Necessario per posizionamento assoluto se aggiungiamo elementi */
