--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         section {
-            background-color: rgba(255, 255, 255, 0.95); /* Sfondo semi-trasparente per le sezioni */
+            background-color: #b6c1ad; /* Sfondo semi-trasparente per le sezioni */
             padding: 2rem;
             margin: 2rem auto; /* Margine sopra e sotto, centrato */
             border-radius: 15px; /* Angoli arrotondati per le sezioni */
