--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Mirko\n&\nElena</h1>
+            <h1>Mirko <br>&<br>Elena</h1>
             <h2>13 Settembre 2025 - Du Lac et Du Parc Grand Resort, Riva del Garda</h2>
         </div>
     </header>
