--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>MIRKO & Elena</h1>
-            <h2>13 Settembre 2025 - Du Lac et Du Parc Grand Resort, Riva del Garda</h2>
+            <h1>Mirko & Elena</h1>
+            <h2>13 Settembre 2025</h2>
         </div>
     </header>
 
