--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Mirko & Elena. Tutti i diritti riservati.</p>
+            <p>&copy; 13/09/2025 Mirko & Elena</p>
         </div>
     </footer>
 </body>
