--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Mirko <br>&<br>Elena</h1>
-            <h2>13 Settembre 2025 - Du Lac et Du Parc Grand Resort, Riva del Garda</h2>
+            <h1>Mirko & Elena</h1>
+            <h2>13 Settembre 2025</h2>
         </div>
     </header>
 
@@ -345,7 +345,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Mirko & Elena. Tutti i diritti riservati.</p>
+            <p>&copy; 13/09/2025 Mirko & Elena</p>
         </div>
     </footer>
 </body>
