--- a/index.html
+++ b/index.html
@@ -307,11 +307,15 @@
     <main>
         <section id="programma">
             <h3>Programma della giornata</h3>
-            <p>Ecco un esempio di testo per il programma.</p>
+            <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
             <ul>
-                <li>Ora 1: Cerimonia</li>
-                <li>Ora 2: Aperitivo</li>
-                <li>Ora 3: Cena</li>
+               <li> Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo
+               <li> (quello con l’abito elegante e le scarpe un po’ scomode)
+            <li>
+               <li> La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso
+<li>
+               <li> Du Lac et du Parc Grand Resort di Riva del Garda (viale Rovereto, 44 - Riva del Garda)
+               <li>  Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale
             </ul>
         </section>
 
@@ -332,7 +336,7 @@
                 <label for="allergies">Allergie o intolleranze alimentari:</label>
                 <textarea id="allergies" name="Allergie_Intolleranze" rows="4" placeholder="Es. Celiachia, lattosio, frutta secca..."></textarea>
 
-                <label for="message">Note aggiuntive (es. preferenze menù per altri invitati, seggioloni, ecc.):</label>
+                <label for="message">Note aggiuntive:</label>
                 <textarea id="message" name="Note_Aggiuntive" rows="4" placeholder="Scrivi qui eventuali richieste speciali o dettagli aggiuntivi."></textarea>
 
                 <button type="submit">Invia conferma</button>
