--- a/index.html
+++ b/index.html
@@ -307,15 +307,15 @@
     <main>
         <section id="programma">
             <h3>Programma della giornata</h3>
-            <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
+            <p>      Sì, è tutto vero… ci sposiamo! 🎉</p>
             <ul>
-               <li> Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo
-               <li> (quello con l’abito elegante e le scarpe un po’ scomode)
-            <li>
-               <li> La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso
-<li>
-               <li> Du Lac et du Parc Grand Resort di Riva del Garda (viale Rovereto, 44 - Riva del Garda)
-               <li>  Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale
+            Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo
+            (quello con l’abito elegante e le scarpe un po’ scomode)
+            
+            La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso
+
+            Du Lac et du Parc Grand Resort di Riva del Garda (viale Rovereto, 44 - Riva del Garda)
+            Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale
             </ul>
         </section>
 
