--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <p class="centered-text">Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo
             (quello con l’abito elegante e le scarpe un po’ scomode)
             <p class="centered-text">La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso
-            <p class="centered-text"><strong>Du Lac et du Parc Grand Resort</strong>strong> di Riva del Garda (viale Rovereto, 44 - Riva del Garda)
+            <p class="centered-text"><strong>Du Lac et du Parc Grand Resort</strong> di Riva del Garda (viale Rovereto, 44 - Riva del Garda)
            <p class="centered-text">Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale
             </ul>
         </section>
