--- a/index.html
+++ b/index.html
@@ -306,15 +306,13 @@
 
     <main>
         <section id="programma">
-            <h3 class="centered-text">Programma della giornata</h3>
-            <p class="centered-text">Sì, è tutto vero… ci sposiamo! 🎉</p>
-            <ul>
-            <p class="centered-text">Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo
-            (quello con l’abito elegante e le scarpe un po’ scomode)
-            <p class="centered-text">La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso
-            <p class="centered-text"><strong>Du Lac et du Parc Grand Resort</strong> di Riva del Garda (viale Rovereto, 44 - Riva del Garda)
-           <p class="centered-text">Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale
-            </ul>
+            <h3>Programma della giornata</h3>
+            <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
+            <p>Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo</p>
+            <p>(quello con l’abito elegante e le scarpe un po’ scomode)</p>
+            <p>La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso</p>
+            <p><strong>Du Lac et du Parc Grand Resort</strong> di Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
+            <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale</p>
         </section>
 
         <section id="rsvp">
