--- a/index.html
+++ b/index.html
@@ -314,10 +314,14 @@
         <section id="programma">
             <h3>Programma della giornata</h3>
             <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
-            <p>Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo<br>(quello con l’abito elegante e le scarpe un po’ scomode).</p>
-            <p>La cerimonia ed il ricevimento si svolgeranno Sabato 13 settembre 2025 presso</p>
-            <p><strong>Du Lac et du Parc Grand Resort</strong> di Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
-            <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale.</p>
+            <p>Dopo 6423 giorni di Amore… 
+            <p>abbiamo deciso che è arrivato il momento</p>
+            <p>di fare il grande passo<br>(quello con l’abito elegante e le scarpe un po’ scomode).</p>
+            <p>La cerimonia ed il ricevimento si svolgeranno <strong>Sabato 13 settembre 2025</strong></p>
+            <p>presso </p>p>
+            <p><strong>Du Lac et du Parc Grand Resort</strong></p>
+            <p>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>    
+            <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
         </section>
 
         <section id="rsvp">
