--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+Assolutamente! Ho aggiornato il tuo codice HTML e CSS per includere la classe .big-word con font-size: 1.2em e l'ho applicata correttamente al testo nella sezione "Programma della giornata".
+
+Ho anche apportato una piccola modifica per rendere il testo della sezione "Programma" ancora più chiaro e leggibile, eliminando alcuni <p> vuoti e unendo le frasi in paragrafi più sensati, usando <br> (break line) dove necessario per andare a capo senza creare nuovi paragrafi. Questo aiuta a mantenere la centratura del testo più uniforme.
+
+HTML
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -53,7 +59,6 @@
             margin: 2rem auto; /* Margine sopra e sotto, centrato */
             border-radius: 15px; /* Angoli arrotondati per le sezioni */
             box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-            /* RIMOSSO text-align: justify; DA QUI per evitare conflitti */
             max-width: 600px; /* Larghezza delle schede (puoi modificarla ulteriormente) */
         }
         
@@ -75,6 +80,13 @@
         p, li {
             font-family: 'Montserrat', sans-serif; /* Assicura che anche p e li usino Montserrat */
             color: #B27777; /* Colore rosa antico per paragrafi e liste */
+        }
+
+        /* Stile per parole evidenziate */
+        .big-word {
+            font-size: 1.2em; /* La parola sarà il 20% più grande del testo circostante */
+            font-weight: bold; /* Opzionale: per renderla anche in grassetto */
+            /* color: #8C5A5A; */ /* Opzionale: un colore diverso per risaltare, se lo desideri */
         }
 
         footer {
@@ -314,12 +326,8 @@
         <section id="programma">
             <h3>Programma della giornata</h3>
             <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
-            <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento<br>di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
-            <p>La cerimonia ed il ricevimento si svolgeranno 
-            <p><strong>Sabato 13 settembre 2025</strong></p>
-            <p>presso </p>
-            <p><strong>Du Lac et du Parc Grand Resort</strong></p>
-            <p>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>    
+            <p>Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
+            <p>La cerimonia ed il ricevimento si svolgeranno <span class="bigword">Sabato 13 settembre 2025</span>span><br>presso **Du Lac et du Parc Grand Resort**<br>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
         </section>
 
