--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <h3>Programma della giornata</h3>
             <p>Sì, è tutto vero… ci sposiamo! 🎉</p>
             <p>Dopo 6423 giorni di Amore… abbiamo deciso che è arrivato il momento di fare il grande passo<br>(quello con l’abito elegante e le scarpe scomode).</p>
-            <p>La cerimonia ed il ricevimento si svolgeranno <span class="bigword">Sabato 13 settembre 2025</span>span><br>presso **Du Lac et du Parc Grand Resort**<br>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
+            <p>La cerimonia ed il ricevimento si svolgeranno<br> <span class="bigword">Sabato 13 settembre 2025</span>span><br>presso<br> Du Lac et du Parc Grand Resort<br>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
         </section>
 
