--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <p>La cerimonia ed il ricevimento si svolgeranno </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025</strong></span></p>
             <p>presso </p>
-            <p><strong>Du Lac et du Parc Grand Resort</strong></p>
+            <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span>span></p>
             <p>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>    
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
         </section>
