--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Mirko & Elena</h1>
-            <h2>13 Settembre 2025</h2>
+            <h1><span class="big-word">Mirko & Elena</span></h1>
         </div>
     </header>
 
@@ -324,7 +323,7 @@
             <p>La cerimonia ed il ricevimento si svolgeranno </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025</strong></span></p>
             <p>presso </p>
-            <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span>span></p>
+            <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
             <p>Riva del Garda (viale Rovereto, 44 - Riva del Garda)</p>    
             <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
         </section>
