--- a/index.html
+++ b/index.html
@@ -362,8 +362,10 @@
 
         <section id="regalo-nozze">
             <h3>Regalo di Nozze</h3>
-            <p>Se desiderate contribuire al nostro viaggio di nozze, ecco i dettagli:</p>
-            <p style="text-align:center;"><strong>IBAN:</strong> IT00A0000000000000000000000</p>
+            <p>Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci a inseguire il nostro sogno americano, una spintarella verso la West Coast sarà più che apprezzata!<br>
+            Tra canyon mozzafiato, strade infinite e hamburger giganti, il vostro pensiero ci accompagnerà lungo ogni miglio.<br>
+            Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna. 😉</p>
+            <p style="text-align:center;"><strong>IBAN:</strong> IT26P080163532100000639848</p>
             <p style="text-align:center;">Causale: Viaggio di nozze Mirko & Elena</p>
         </section>
 
